/*
 * Discovered via APK analysis (xki.java, AA v16.1)
 * Validation errors the phone checks against our ServiceDiscoveryResponse.
 */

syntax="proto3";

package oaa.proto.enums;

message SessionError
{
    enum Enum
    {
        NONE = 0;
        NO_SENSORS = 1;
        BAD_MIC_AUDIO_CONFIG = 6;
        BAD_AUDIO_CONFIG = 7;
        MISSING_AUDIO_CONFIG = 8;
        NAV_NO_IMAGE_OPTIONS = 9;
        BAD_VIDEO = 12;
        MISSING_VIDEO = 13;
        NO_VIDEO_CONFIG = 17;
        BAD_CODEC_RESOLUTION = 18;
        BAD_DISPLAY_RESOLUTION = 19;
        BAD_FPS = 20;
        NO_DENSITY = 21;
        BAD_DENSITY = 22;
        NO_INPUT = 26;
        VIDEO_ACK_TIMEOUT = 48;
        PING_TIMEOUT = 57;
        MULTIPLE_DISPLAY_CONFIGS = 58;
        AUTH_FAILED_OBSOLETE_SSL = 75;
    }
}
