// Decoded from APK class: nop

syntax = "proto2";

enum nop {
    MEDIA_STREAM_EVENT_TYPE_UNSPECIFIED = 0;
    CHANNEL_OPENED = 1;
    MESSAGE_CONFIG_RECEIVED = 2;
    START = 3;
    START_REQUESTED_BEFORE_CONFIG_MESSAGE_RECEIVED = 4;
    SENDING_CODEC_CONFIG = 5;
    INVALID_MESSAGE_RECEIVED = 100;
    CAR_DID_NOT_SEND_ALL_ACKS = 102;
    CALLBACK_QUEUE_OVERFLOW = 103;
    RECEIVED_ACK_WITH_WRONG_SESSION_ID = 104;
    CHANNEL_CLOSE_REQUESTED = 200;
    CHANNEL_CLOSED_DUE_TO_PROTOCOL_ERROR = 201;
    PREPARE_STOP = 202;
    STOP = 203;
    STOP_CALLED_WHEN_NOT_STARTED = 204;
    TRIED_TO_SEND_CODEC_CONFIG_WHILE_NOT_STARTED = 300;
    TRIED_TO_SEND_DATA_WHILE_NOT_STARTED = 301;
    RECEIVED_ACK_WHILE_NOT_STARTED = 302;
    AUDIO_SYSTEM_SOUND_CAPTURING_STARTING = 1000;
    AUDIO_SYSTEM_SOUND_CAPTURING_STARTED = 1001;
    AUDIO_RECORD_UNINITIALIZED = 1002;
    AUDIO_CAPTURE_SETUP_WITH_NEW_APIS_FAILED = 1003;
    AUDIO_SET_VOLUME = 1004;
    AUDIO_RECORD_READ_ERROR = 1005;
    AUDIO_REQUESTING_BOTTOM_HALF = 1006;
    AUDIO_PREVIOUS_BOTTOM_HALF_NOT_RELEASED = 1007;
    AUDIO_STREAMING_REQUEST_CANCELLED_DUE_TO_LONG_SILENCE = 1008;
    AUDIO_CAR_READY = 1009;
    AUDIO_BOTTOM_HALF_AVAILABLE = 1010;
    AUDIO_RECORD_FORCE_SINGLE_CHANNEL_CAPTURING = 1011;
    AUDIO_RECORD_READ_REMOTE_ERROR = 1012;
    NULL_AUDIO_RECORD = 1013;
    AUDIO_POLICY_REGISTER_FAILURE = 1014;
    AUDIO_HANDLE_FOCUS_CHANGE_COMMAND = 1100;
    AUDIO_FOCUS_CHANGE_COMMAND_TIMED_OUT = 1101;
    AUDIO_BOTTOM_HALF_SWITCHED = 1102;
    AUDIO_CONCURRENT_FOCUS_CHANGE_COMMAND = 1103;
    AUDIO_RECORD_PARTIAL_BUFFER_READ = 1104;
    AUDIO_RECORD_DIRECT_BUFFER_NOT_SUPPORTED = 1105;
    AUDIO_SYSTEM_SOUND_CAPTURING_ENDING = 1200;
    AUDIO_SYSTEM_SOUND_CAPTURING_ENDED = 1201;
    AUDIO_SYSTEM_SOUND_CAPTURING_END_TIMEOUT = 1202;
    AUDIO_SYSTEM_SOUND_CAPTURING_END_SECOND_TRY_TIMEOUT = 1203;
    AUDIO_STREAMING_STOPPED_DUE_TO_LONG_SILENCE = 1204;
    AUDIO_RECORD_RELEASE_TIMEOUT = 1205;
    AUDIO_RECORD_RELEASE_CAPTURE_THREAD_INTERRUPTED = 1206;
    AUDIO_RECORD_RELEASE_FAILED = 1207;
    AUDIO_RECORD_RELEASE_RECORD_NOT_AVAILABLE = 1208;
    AUDIO_BOTTOM_HALF_LOST = 1209;
    AUDIO_IRRELEVANT_BOTTOM_HALF_LOST = 1210;
    AUDIO_BOTTOM_HALF_STREAMING_STARTED = 2000;
    AUDIO_BOTTOM_HALF_STREAMING_ALREADY_STARTED = 2001;
    AUDIO_BOTTOM_HALF_CAR_READY = 2002;
    AUDIO_BOTTOM_HALF_END_POINT_READY = 2003;
    AUDIO_BOTTOM_HALF_TRANSMISSION_HANDLER_INITIALIZED = 2004;
    AUDIO_BOTTOM_HALF_TRANSMISSION_HANDLER_STARTED = 2005;
    AUDIO_BOTTOM_HALF_TRANSMISSION_HANDLER_ALREADY_STARTED = 2006;
    AUDIO_BOTTOM_HALF_CAR_NOT_READY = 2200;
    AUDIO_BOTTOM_HALF_DISABLED = 2201;
    AUDIO_BOTTOM_HALF_STREAMING_STOPPED = 2202;
    AUDIO_BOTTOM_HALF_STREAMING_ALREADY_STOPPED = 2203;
    AUDIO_BOTTOM_HALF_TIMEOUT_WAITING_FOR_STREAM_TO_STOP = 2204;
    AUDIO_BOTTOM_HALF_TRANSMISSION_HANDLER_STOPPED = 2205;
    AUDIO_BOTTOM_HALF_TRANSMISSION_HANDLER_MESSAGE_IGNORED = 2206;
}